chore(i18n): update translations

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -103,7 +103,8 @@
     "settings": "Einstellungen",
     "eventSettings": "Termine",
     "doctors": "Ärzt:in",
-    "institutions": "Einrichtungen"
+    "institutions": "Einrichtungen",
+    "refresh": "neu laden"
   },
   "label": {
     "user": "user",
