--- a/client/src/i18n/locales/en/translations.json
+++ b/client/src/i18n/locales/en/translations.json
@@ -102,7 +102,8 @@
     "settings": "settings",
     "eventSettings": "events",
     "doctors": "Doctors",
-    "institutions": "Institutions"
+    "institutions": "Institutions",
+    "refresh": "refresh"
   },
   "label": {
     "name": "name",
