chore(i18n): update translations

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -149,7 +149,8 @@
     "birthday": "Geburtstag",
     "room": "Raum",
     "noRoom": "kein Raum",
-    "cancelled": "abges."
+    "cancelled": "abges.",
+    "continue": "weiter"
   },
   "auth": {
     "login": "anmelden",
