--- a/client/src/i18n/locales/en/translations.json
+++ b/client/src/i18n/locales/en/translations.json
@@ -148,7 +148,8 @@
     "birthday": "birthday",
     "room": "room",
     "noRoom": "no room",
-    "cancelled": "cancelled"
+    "cancelled": "cancelled",
+    "continue": "continue"
   },
   "auth": {
     "login": "login",
