chore(i18n): update translations

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -150,7 +150,8 @@
     "room": "Raum",
     "noRoom": "kein Raum",
     "cancelled": "abges.",
-    "continue": "weiter"
+    "continue": "weiter",
+    "showArchivedData": "archivierte Daten anzeigen"
   },
   "auth": {
     "login": "anmelden",
