chore(i18n): update translations

--- a/client/src/i18n/locales/en/translations.json
+++ b/client/src/i18n/locales/en/translations.json
@@ -90,8 +90,8 @@
     "personalCalendar": "You",
     "personalData": "Personal Data",
     "teamCalendar": "Team",
-    "roomCalendar": "Roombookings",
-    "roomCalendarLive": "Rooms",
+    "roomCalendar": "Rooms (fixed)",
+    "roomCalendarLive": "Rooms per Week",
     "patients": "Patients",
     "waitingList": "Waiting List",
     "teamSettings": "Team",
