--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -91,8 +91,8 @@
     "personalCalendar": "Du",
     "personalData": "Persönliche Daten",
     "teamCalendar": "Team",
-    "roomCalendar": "Raumbelegung",
-    "roomCalendarLive": "Räume",
+    "roomCalendar": "Räume (fix)",
+    "roomCalendarLive": "Räume/Woche",
     "patients": "Patient:in",
     "waitingList": "Warteliste",
     "teamSettings": "Teamübersicht",
