chore(i18n): update translations

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -119,6 +119,7 @@
     "street": "Straße",
     "city": "Ort",
     "isAddpayFreed": "befreit?",
+    "addPayFreedUntil": "befreit für",
     "hasContract": "Vertrag?",
     "notices": "Notizen",
     "firstContactAt": "Anmeldedatum",
