--- a/client/src/i18n/locales/en/translations.json
+++ b/client/src/i18n/locales/en/translations.json
@@ -118,6 +118,7 @@
     "street": "street",
     "city": "City",
     "isAddpayFreed": "freed?",
+    "addPayFreedUntil": "freed for",
     "hasContract": "contract?",
     "notices": "notices",
     "firstContactAt": "Date of reception",
