chore(i18n): update translations

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -29,7 +29,9 @@
       "interval": "Intervall",
       "start": "Start",
       "end": "Ende",
-      "previewRecurringApointments": "Vorschau Terminserie"
+      "previewRecurringApointments": "Vorschau Terminserie",
+      "thisEvent": "nur diesen Termin",
+      "thisAndAllFutureEvents": "diesen + zukünftige Termine der Serie"
     },
     "leave": {
       "type": {
