chore(i18n): update translations

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -107,7 +107,8 @@
     "doctors": "Ärzt:in",
     "institutions": "Einrichtungen",
     "refresh": "neu laden",
-    "reports": "Auswertungen"
+    "reports": "Auswertungen",
+    "weekReport": "Wochenbericht"
   },
   "label": {
     "user": "user",
