--- a/client/src/i18n/locales/en/translations.json
+++ b/client/src/i18n/locales/en/translations.json
@@ -106,7 +106,8 @@
     "doctors": "Doctors",
     "institutions": "Institutions",
     "refresh": "refresh",
-    "reports": "reports"
+    "reports": "reports",
+    "weekReport": "week report"
   },
   "label": {
     "name": "name",
