--- a/client/src/i18n/locales/en/translations.json
+++ b/client/src/i18n/locales/en/translations.json
@@ -155,7 +155,8 @@
     "noRoom": "no room",
     "cancelled": "cancelled",
     "continue": "continue",
-    "showArchivedData": "show archived data"
+    "showArchivedData": "show archived data",
+    "waitingPreference": "prefers"
   },
   "auth": {
     "login": "login",
