chore(i18n): update translations

--- a/client/src/i18n/locales/en/translations.json
+++ b/client/src/i18n/locales/en/translations.json
@@ -39,6 +39,7 @@
         "paidVacation": "paid vacation",
         "unpaidLeave": "unpaid leave",
         "parentalLeave": "parental leave",
+        "training": "training",
         "special": "special leave"
       },
       "status": {
