--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -40,6 +40,7 @@
         "paidVacation": "Urlaub",
         "unpaidLeave": "unbez. Urlaub",
         "parentalLeave": "Elternzeit",
+        "training": "Fortbildung",
         "special": "special"
       },
       "status": {
