chore(i18n): update translations

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -185,10 +185,15 @@
     "fillResetPasswordForm": "Bitte fülle dieses Formular aus, um Dein Passwort zurückzusetzen"
   },
   "employee": {
+    "timesheet": {
+      "label": "Zeitkonto",
+      "model": "aktuelles Zeitmodell"
+    },
     "contract": {
       "label": "Vertrag",
       "appointments": "Therapieeinheiten",
       "hours": "Stunden",
+      "activeWorkdays": "vereinbarte Arbeitstage: {{activeWorkdayNames}}",
       "summary": "{{numberOfUnits}} {{contractBase}} in {{workdaysPerWeek}} Tagen pro Woche.",
       "leaveWorthDescription": "Ein Tag Abwesenheit entspricht {{leaveWorthPerDay}} {{contractBase}}",
       "overruledBy": "übersteuert durch "
