chore(i18n): update translations

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -187,7 +187,9 @@
   "employee": {
     "timesheet": {
       "label": "Zeitkonto",
-      "model": "aktuelles Zeitmodell"
+      "model": "aktuelles Zeitmodell",
+      "absences": "Abwesenheiten",
+      "publicHoliday": "Feiertag"
     },
     "contract": {
       "label": "Vertrag",
