--- a/client/src/i18n/locales/en/translations.json
+++ b/client/src/i18n/locales/en/translations.json
@@ -186,7 +186,9 @@
   "employee": {
     "timesheet": {
       "label": "timesheet",
-      "model": "current timemodel"
+      "model": "current timemodel",
+      "absences": "absences",
+      "publicHoliday": "public holiday"
     },
     "contract": {
       "label": "contract",
