chore(i18n): update translations

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -64,7 +64,8 @@
     "delete": "löschen",
     "archive": "archivieren",
     "activate": "aktivieren",
-    "add": "hinzufügen"
+    "add": "hinzufügen",
+    "new": "neu"
   },
   "time": {
     "ofDay": {
