--- a/client/src/i18n/locales/en/translations.json
+++ b/client/src/i18n/locales/en/translations.json
@@ -63,7 +63,8 @@
     "delete": "delete",
     "archive": "archive",
     "activate": "activate",
-    "add": "add"
+    "add": "add",
+    "new": "new"
   },
   "time": {
     "ofDay": {
