fix(i18n): rename key

--- a/client/src/i18n/locales/en/translations.json
+++ b/client/src/i18n/locales/en/translations.json
@@ -105,7 +105,7 @@
     "rooms": "Rooms (fixed)",
     "roomCalendar": "Rooms per Week",
     "patients": "Patients",
-    "waitings": "Waiting List",
+    "waiting": "Waiting List",
     "teamSettings": "Team",
     "employeeSettings": "Employees",
     "userSettings": "User",
