--- a/client/src/i18n/locales/en/translations.json
+++ b/client/src/i18n/locales/en/translations.json
@@ -204,5 +204,12 @@
       "leaveWorthDescription": "One day of leave equals {{leaveWorthPerDay}} {{contractBase}}",
       "overruledBy": "overruled by "
     }
+  },
+  "alert": {
+    "isDone": {
+      "dialogHeader": "remove done marker?",
+      "dialogBody": "Do you want to remove the ✅ done marker for this event?",
+      "dialogConfirm": "yes, go away!"
+    }
   }
 }
