chore(i18n): update translations

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -140,7 +140,7 @@
     "notices": "Notizen",
     "firstContactAt": "Anmeldedatum",
     "isWaitingSince": "Datum für Warteliste",
-    "isWaitingAgain": "Wieder auf Warteliste",
+    "isWaitingAgain": "Wieder drauf?",
     "telephoneNumber": "Telefon",
     "mailAddress": "eMail",
     "actions": "Actions",
