chore(i18n): update translations

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -136,7 +136,8 @@
     "isAddpayFreed": "befreit?",
     "addPayFreedUntil": "befreit für",
     "hasContract": "Vertrag?",
-    "createContract": "Vertrag erzeugen",
+    "createContract": "erzeugen",
+    "printContract": "drucken",
     "notices": "Notizen",
     "firstContactAt": "Anmeldedatum",
     "isWaitingSince": "Datum für Warteliste",
