--- a/client/src/i18n/locales/en/translations.json
+++ b/client/src/i18n/locales/en/translations.json
@@ -135,7 +135,8 @@
     "isAddpayFreed": "freed?",
     "addPayFreedUntil": "freed for",
     "hasContract": "contract?",
-    "createContract": "create Contract",
+    "createContract": "create",
+    "printContract": "print",
     "notices": "notices",
     "firstContactAt": "Date of reception",
     "isWaitingSince": "Date for Waiting List",
