chore(i18n): update translations

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -213,5 +213,9 @@
       "dialogBody": "Möchtest Du den ✅ erledigt Haken für diesen Termin wieder entfernen?",
       "dialogConfirm": "ja, weg damit!"
     }
+  },
+  "pagination": {
+    "of": "von",
+    "page": "Seite"
   }
 }
