chore(i18n): update translations

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -119,7 +119,8 @@
     "refresh": "neu laden",
     "reports": "Auswertungen",
     "weekReport": "Wochenbericht",
-    "singleView": "Einzelansicht"
+    "singleView": "Monatsansicht",
+    "singleYearView": "Jahresansicht"
   },
   "label": {
     "user": "user",
