chore(i18n): update translations

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -156,7 +156,7 @@
     "no": "keine",
     "institution": "Einrichtung",
     "employeeProfile": "Mitarbeiterprofil",
-    "employeeSelect": "Mitarbeiter:in auswählen",
+    "employeeSelect": "Mitarbeiter:in",
     "contractData": "Vertragsdaten",
     "newPermission": "neue Berechtigung",
     "currentPermissions": "aktuelle Berechtigungen",
