--- a/client/src/i18n/locales/en/translations.json
+++ b/client/src/i18n/locales/en/translations.json
@@ -155,7 +155,7 @@
     "no": "no",
     "institution": "Institution",
     "employeeProfile": "Employee Profile",
-    "employeeSelect": "select employee",
+    "employeeSelect": "employee",
     "contractData": "contract data",
     "newPermission": "new permission",
     "currentPermissions": "current permissions",
