chore(i18n): update translations

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -172,7 +172,8 @@
     "cancelled": "abges.",
     "continue": "weiter",
     "showArchivedData": "archivierte Daten anzeigen",
-    "waitingPreference": "bevorzugt"
+    "waitingPreference": "bevorzugt",
+    "contract": "Vertrag"
   },
   "auth": {
     "login": "anmelden",
@@ -205,6 +206,15 @@
       "activeWorkdays": "vereinbarte Arbeitstage: {{activeWorkdayNames}}",
       "summary": "{{numberOfUnits}} {{contractBase}} in {{workdaysPerWeek}} Tagen pro Woche.",
       "leaveWorthDescription": "Ein Tag Abwesenheit entspricht {{leaveWorthPerDay}} {{contractBase}}",
+      "overruledBy": "übersteuert durch "
+    },
+    "contractShortform": {
+      "label": "Vertrag",
+      "appointments": "TE",
+      "hours": "Std",
+      "activeWorkdays": "Tage: {{activeWorkdayNames}}",
+      "summary": "{{numberOfUnits}} {{contractBase}} in {{workdaysPerWeek}} Tg/W",
+      "leaveWorthDescription": "Abwesenh. = {{leaveWorthPerDay}} {{contractBase}}",
       "overruledBy": "übersteuert durch "
     }
   },
