chore(i18n): update translations

--- a/client/src/i18n/locales/de/translations.json
+++ b/client/src/i18n/locales/de/translations.json
@@ -120,10 +120,13 @@
     "reports": "Auswertungen",
     "weekReport": "Wochenbericht",
     "singleView": "Monatsansicht",
-    "singleYearView": "Jahresansicht"
+    "singleYearView": "Jahresansicht",
+    "adminTools": "admin tools",
+    "timesheetAccounts": "Zeitkonten"
   },
   "label": {
     "user": "user",
+    "externalId": "externe ID",
     "alias": "alias",
     "name": "Name",
     "description": "Beschreibung",
